force-app/main/default/objects/Case/fields/Customer_Billing_Address__c.field-meta.xml
<CustomField>
    <fullName>Customer_Billing_Address__c</fullName>
    <formula>CASE(
Account.RecordType.Name,
&quot;Customer&quot;,
if (isblank(Account.BillingAddress),  

Account.ShippingStreet + &apos; &apos; + Account.ShippingCity + &apos; &apos; + Account.ShippingState + &apos;  &apos; + Account.ShippingPostalCode + &apos; &apos; + Account.ShippingCountry

,  
 Account.BillingStreet  + &apos; &apos; + Account.BillingCity + &apos; &apos; + Account.BillingState + &apos;  &apos; + Account.BillingPostalCode + &apos; &apos; + Account.BillingCountry

),
&quot;Broker&quot;,
if (isblank(Account.BillingAddress),  

Account.ShippingStreet + &apos; &apos; + Account.ShippingCity + &apos; &apos; + Account.ShippingState + &apos;  &apos; + Account.ShippingPostalCode + &apos; &apos; + Account.ShippingCountry

,  
 Account.BillingStreet  + &apos; &apos; + Account.BillingCity + &apos; &apos; + Account.BillingState + &apos;  &apos; + Account.BillingPostalCode + &apos; &apos; + Account.BillingCountry

),
&quot;Distributor&quot;,
if (isblank(Account.BillingAddress),  

Account.ShippingStreet + &apos; &apos; + Account.ShippingCity + &apos; &apos; + Account.ShippingState + &apos;  &apos; + Account.ShippingPostalCode + &apos; &apos; + Account.ShippingCountry

,  
 Account.BillingStreet  + &apos; &apos; + Account.BillingCity + &apos; &apos; + Account.BillingState + &apos;  &apos; + Account.BillingPostalCode + &apos; &apos; + Account.BillingCountry

),
if (isblank(Account.Parent.BillingAddress),  

Account.Parent.ShippingStreet + &apos; &apos; + Account.Parent.ShippingCity + &apos; &apos; + Account.Parent.ShippingState + &apos;  &apos; + Account.Parent.ShippingPostalCode + &apos; &apos; + Account.Parent.ShippingCountry

,  
Account.Parent.BillingStreet  + &apos; &apos; + Account.Parent.BillingCity + &apos; &apos; + Account.Parent.BillingState + &apos;  &apos; + Account.Parent.BillingPostalCode + &apos; &apos; + Account.Parent.BillingCountry

)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>If the case being submitted is for a Shipto/gen, this is the Billing Address of the colinked Customer account</inlineHelpText>
    <label>Customer Billing Address</label>
    <type>Text</type>
</CustomField>