force-app/main/default/objects/Case/fields/Customer_Corporate_Address__c.field-meta.xml
<CustomField>
    <fullName>Customer_Corporate_Address__c</fullName>
    <description>Customer Shipping address</description>
    <formula>Account.ShippingStreet + &apos; &apos; + Account.ShippingCity + &apos; &apos; + Account.ShippingState + &apos;, &apos; + Account.ShippingPostalCode + &apos; &apos; + Account.ShippingCountry</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Corporate Address</label>
    <type>Text</type>
</CustomField>