force-app/main/default/objects/Case/fields/Days_Since_Last_Activity__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_Last_Activity__c</fullName>
    <description>This field identifies Age of the last activity on the Case.</description>
    <formula>If(isblank(LastModifiedDate) &amp;&amp; isblank(Last_Commented_Date__c ),Now()- CreatedDate,
If( isnull(Last_Commented_Date__c ), Now()-LastModifiedDate ,
IF( Last_Commented_Date__c &gt;= LastModifiedDate , NOW()- Last_Commented_Date__c , NOW()-LastModifiedDate )))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Since Last Activity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>