force-app/main/default/objects/Case/fields/Denial_Reason__c.field-meta.xml
<CustomField>
    <fullName>Denial_Reason__c</fullName>
    <label>Denial Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Invalid Main Contact eMail Address</fullName>
            </value>
            <value>
                <fullName>Invalid Main Contact Information</fullName>
            </value>
            <value>
                <fullName>Invalid Street Address</fullName>
            </value>
            <value>
                <fullName>Avention Company Not Found</fullName>
            </value>
            <value>
                <fullName>Duplicate Account</fullName>
            </value>
            <value>
                <fullName>Call note Required</fullName>
            </value>
            <value>
                <fullName>Corp addr change to PO Box not allowed</fullName>
            </value>
            <value>
                <fullName>Cannot Expire - active colinks</fullName>
            </value>
            <value>
                <fullName>Cannot Expire - active Orders/Services</fullName>
            </value>
            <value>
                <fullName>Invalid Alt Billing address</fullName>
            </value>
            <value>
                <fullName>Invalid EPA ID</fullName>
            </value>
            <value>
                <fullName>Invalid Vertical / Class</fullName>
            </value>
            <value>
                <fullName>Invalid Address</fullName>
            </value>
            <value>
                <fullName>Pricing chain - updated by Pricing team</fullName>
            </value>
            <value>
                <fullName>Require additional information</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Cannot Expire – open SF opportunities</fullName>
            </value>
            <value>
                <fullName>Name change - requires add&apos;l information</fullName>
            </value>
            <value>
                <fullName>No Response From Requester</fullName>
            </value>
            <value>
                <fullName>Customer -&gt; ShipTo/GEN Relationship Required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>