force-app/main/default/objects/Case/fields/Disable_Event_Firing__c.field-meta.xml
<CustomField>
    <fullName>Disable_Event_Firing__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is to disable event firing on case when the case comment is added and which leads to update in the case status</description>
    <label>Disable Event Firing</label>
    <type>Checkbox</type>
</CustomField>