force-app/main/default/objects/Case/fields/Dispute_Type__c.field-meta.xml
<CustomField>
    <fullName>Dispute_Type__c</fullName>
    <description>Depends on Call Reason</description>
    <inlineHelpText>Depends on Call Reason</inlineHelpText>
    <label>Dispute Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Call_Reason__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Service not Requested</fullName>
            </value>
            <value>
                <fullName>Off Spec</fullName>
            </value>
            <value>
                <fullName>Not Satisfied with Service</fullName>
            </value>
            <value>
                <fullName>Incorrect Quote</fullName>
            </value>
            <value>
                <fullName>Receipt does not match invoice</fullName>
            </value>
            <value>
                <fullName>Tax Exempt</fullName>
            </value>
            <value>
                <fullName>PO Required</fullName>
            </value>
            <value>
                <fullName>Invalid PO</fullName>
            </value>
            <value>
                <fullName>Expired PO</fullName>
            </value>
            <value>
                <fullName>Manifest</fullName>
            </value>
            <value>
                <fullName>Recovery</fullName>
            </value>
            <value>
                <fullName>Late</fullName>
            </value>
            <value>
                <fullName>Broken</fullName>
            </value>
            <value>
                <fullName>Equipment Pulled</fullName>
            </value>
            <value>
                <fullName>Pull Equipment</fullName>
            </value>
            <value>
                <fullName>Did not receive Invoice</fullName>
            </value>
            <value>
                <fullName>Promised Credit</fullName>
            </value>
            <value>
                <fullName>Out of Business</fullName>
            </value>
            <value>
                <fullName>CO/CH</fullName>
            </value>
            <value>
                <fullName>Bankruptcy</fullName>
            </value>
            <value>
                <fullName>Invoice Question</fullName>
            </value>
            <value>
                <fullName>New Owner</fullName>
            </value>
            <value>
                <fullName>Payment made</fullName>
            </value>
            <value>
                <fullName>Paid at time of service</fullName>
            </value>
            <value>
                <fullName>Payment terms</fullName>
            </value>
            <value>
                <fullName>Service not Completed</fullName>
            </value>
            <value>
                <fullName>No Signed Receipt</fullName>
            </value>
            <value>
                <fullName>CCC PO Review</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>