force-app/main/default/objects/Case/fields/Duplicate_Account2__c.field-meta.xml
<CustomField>
    <fullName>Duplicate_Account2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Duplicate Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Cases (Duplicate Account)</relationshipLabel>
    <relationshipName>Cases3</relationshipName>
    <type>Lookup</type>
</CustomField>