force-app/main/default/objects/Case/fields/Duplicate_Justification__c.field-meta.xml
<CustomField>
    <fullName>Duplicate_Justification__c</fullName>
    <label>Duplicate Justification</label>
    <length>255</length>
    <type>Text</type>
</CustomField>