force-app/main/default/objects/Case/fields/Duplicate_Reason__c.field-meta.xml
<CustomField>
    <fullName>Duplicate_Reason__c</fullName>
    <description>This field is used to track the information on a case to see quickly why a duplicate was approved and what account it was.</description>
    <label>Duplicate Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Wrong Parent Account</fullName>
            </value>
            <value>
                <fullName>Different Customer Budgets</fullName>
            </value>
            <value>
                <fullName>Movement of Related Data</fullName>
            </value>
            <value>
                <fullName>Unique Invoice Delivery Methods</fullName>
            </value>
            <value>
                <fullName>Acquisitions Limitation</fullName>
            </value>
            <value>
                <fullName>Unique Customer Part Numbers</fullName>
            </value>
            <value>
                <fullName>Contractor Relationships</fullName>
            </value>
            <value>
                <fullName>Pricing Contract Limitations</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Invoice Delivery Requirements</fullName>
            </value>
            <value>
                <fullName>Change of Account Ownership</fullName>
            </value>
            <value>
                <fullName>Same Building Different Company</fullName>
            </value>
            <value>
                <fullName>Separate Account Budgets</fullName>
            </value>
            <value>
                <fullName>Cannot Demote Cust Account</fullName>
            </value>
            <value>
                <fullName>Parts Number Restriction</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>