force-app/main/default/objects/Case/fields/EBiller__c.field-meta.xml
<CustomField>
    <fullName>EBiller__c</fullName>
    <label>EBiller</label>
    <length>10</length>
    <type>Text</type>
</CustomField>