force-app/main/default/objects/Case/fields/EOC_Case__c.field-meta.xml
<CustomField>
    <fullName>EOC_Case__c</fullName>
    <defaultValue>false</defaultValue>
    <description>EOC means Emergency Operations Center, this field will be checked true when the user belongs to Emergency Operations Center Permission set.</description>
    <label>EOC Case</label>
    <type>Checkbox</type>
</CustomField>