force-app/main/default/objects/Case/fields/Escalation__c.field-meta.xml
<CustomField>
    <fullName>Escalation__c</fullName>
    <formula>IF( Level_1_Escalation__c = True, &quot;Level 1&quot;,
IF( Level_2_Escalation__c = True, &quot;Level 2&quot;,
IF( Level_3_Escalation__c = True, &quot;Level 3&quot;, NULL)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Escalation</label>
    <type>Text</type>
</CustomField>