force-app/main/default/objects/Case/fields/Exemption_Type__c.field-meta.xml
<CustomField>
    <fullName>Exemption_Type__c</fullName>
    <description>Exception Reason for AQMD Approval</description>
    <inlineHelpText>There will be a $250 charge to evaluate Exceptions</inlineHelpText>
    <label>Exemption Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aerospace Manufacturing/Assembly</fullName>
            </value>
            <value>
                <fullName>Janitorial Cleaning</fullName>
            </value>
            <value>
                <fullName>Medical/Pharmaceutical</fullName>
            </value>
            <value>
                <fullName>Medical Devices</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Research/Laboratory</fullName>
            </value>
            <value>
                <fullName>Resin/Coating/Ink Manufacturing</fullName>
            </value>
            <value>
                <fullName>Semiconductor Manufacturing</fullName>
            </value>
            <value>
                <fullName>Stripping Coatings/Ink/Adhesives</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>