force-app/main/default/objects/Case/fields/Existing_Territory__c.field-meta.xml
<CustomField>
    <fullName>Existing_Territory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Existing Territory Lookup</description>
    <label>Existing Territory</label>
    <referenceTo>Territory__c</referenceTo>
    <relationshipLabel>Cases (Existing Territory)</relationshipLabel>
    <relationshipName>Cases3</relationshipName>
    <type>Lookup</type>
</CustomField>