force-app/main/default/objects/Case/fields/Explain_Other_Reason__c.field-meta.xml
<CustomField>
    <fullName>Explain_Other_Reason__c</fullName>
    <description>Test required when &apos;Other&apos; is picked as the Exemption</description>
    <inlineHelpText>Explain why &apos;Other&apos; was picked.</inlineHelpText>
    <label>How can we help you</label>
    <length>255</length>
    <type>Text</type>
</CustomField>