force-app/main/default/objects/Case/fields/Follow_up_action__c.field-meta.xml
<CustomField>
    <fullName>Follow_up_action__c</fullName>
    <label>Follow up action</label>
    <length>10</length>
    <type>Text</type>
</CustomField>