force-app/main/default/objects/Case/fields/Generator_Code__c.field-meta.xml
<CustomField>
    <fullName>Generator_Code__c</fullName>
    <label>Generator Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>