force-app/main/default/objects/Case/fields/Include_all_locations__c.field-meta.xml
<CustomField>
    <fullName>Include_all_locations__c</fullName>
    <defaultValue>false</defaultValue>
    <description>flag to pull in all co-linked locations</description>
    <inlineHelpText>Check this box if you want all underlying locations to be included</inlineHelpText>
    <label>Include All Locations</label>
    <type>Checkbox</type>
</CustomField>