force-app/main/default/objects/Case/fields/Incomplete_Profile_Comments__c.field-meta.xml
<CustomField>
    <fullName>Incomplete_Profile_Comments__c</fullName>
    <description>This is open for development creativity and discussion.</description>
    <label>Incomplete Profile Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>