force-app/main/default/objects/Case/fields/Inserted_By__c.field-meta.xml
<CustomField>
    <fullName>Inserted_By__c</fullName>
    <label>Inserted By</label>
    <type>TextArea</type>
</CustomField>