force-app/main/default/objects/Case/fields/Invoice_Date__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Date__c</fullName>
    <description>Invoice Date</description>
    <label>Invoice Date</label>
    <length>50</length>
    <type>Text</type>
</CustomField>