force-app/main/default/objects/Case/fields/Invoice_Number__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Number__c</fullName>
    <label>Invoice Numbers</label>
    <type>TextArea</type>
</CustomField>