force-app/main/default/objects/Case/fields/Is_Billing_Expired__c.field-meta.xml
<CustomField>
    <fullName>Is_Billing_Expired__c</fullName>
    <formula>Account.Billing_Expired__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Billing Expired</label>
    <type>Checkbox</type>
</CustomField>