force-app/main/default/objects/Case/fields/Is_Current_Owner_VP_SVP__c.field-meta.xml
<CustomField>
    <fullName>Is_Current_Owner_VP_SVP__c</fullName>
    <formula>or(
CONTAINS(Owner:User.Title  , &quot;SVP&quot;)
,CONTAINS(Owner:User.Title  , &quot;VP&quot;)
,CONTAINS(Current_Owner__r.Title , &quot;SVP&quot;)
,CONTAINS(Current_Owner__r.Title, &quot;VP&quot;)
,CONTAINS(Current_Owner__r.Title, &quot;Vice Pres&quot;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Current Owner VP, SVP</label>
    <type>Checkbox</type>
</CustomField>