force-app/main/default/objects/Case/fields/Is_Submitted_for_Approval__c.field-meta.xml
<CustomField>
    <fullName>Is_Submitted_for_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determines if the case is submitted for approval</description>
    <label>Is Submitted for Approval</label>
    <type>Checkbox</type>
</CustomField>