force-app/main/default/objects/Case/fields/IS_User_PO_Case_Queue_Member__c.field-meta.xml
<CustomField>
    <fullName>IS_User_PO_Case_Queue_Member__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field is being used to check the user is a member of the Queue</description>
    <label>IS User PO Case Queue Member</label>
    <type>Checkbox</type>
</CustomField>