force-app/main/default/objects/Case/fields/Keyword_1__c.field-meta.xml
<CustomField>
    <fullName>Keyword_1__c</fullName>
    <label>Issue</label>
    <length>10</length>
    <type>Text</type>
</CustomField>