force-app/main/default/objects/Case/fields/Keyword_2__c.field-meta.xml
<CustomField>
    <fullName>Keyword_2__c</fullName>
    <label>Responsible</label>
    <length>10</length>
    <type>Text</type>
</CustomField>