force-app/main/default/objects/Case/fields/Keyword_3__c.field-meta.xml
<CustomField>
    <fullName>Keyword_3__c</fullName>
    <label>Action</label>
    <length>10</length>
    <type>Text</type>
</CustomField>