force-app/main/default/objects/Case/fields/Last_Comment_Age__c.field-meta.xml
<CustomField>
    <fullName>Last_Comment_Age__c</fullName>
    <formula>If( not(IsClosed), now()- LastModifiedDate , LastModifiedDate -  CreatedDate )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Modified Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>