force-app/main/default/objects/Case/fields/Last_Commented_Age__c.field-meta.xml
<CustomField>
    <fullName>Last_Commented_Age__c</fullName>
    <description>This field determines the number of days since the last comment using the Last commented date field as reference</description>
    <formula>IF( ISNULL( Last_Commented_Date__c ) , null,If( NOT(IsClosed), Now() - Last_Commented_Date__c, ClosedDate - Last_Commented_Date__c) )</formula>
    <label>Last Commented Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>