force-app/main/default/objects/Case/fields/Latest_Case_Comment__c.field-meta.xml
<CustomField>
    <fullName>Latest_Case_Comment__c</fullName>
    <description>A workflow updates it from case comments when updated or changed.</description>
    <label>Latest Case Comment</label>
    <length>100000</length>
    <type>Html</type>
</CustomField>