force-app/main/default/objects/Case/fields/Level_1_Escalation__c.field-meta.xml
<CustomField>
    <fullName>Level_1_Escalation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>2nd call / irate customer</description>
    <inlineHelpText>2nd call / irate customer</inlineHelpText>
    <label>Level 1</label>
    <type>Checkbox</type>
</CustomField>