force-app/main/default/objects/Case/fields/Level_2_Escalation__c.field-meta.xml
<CustomField>
    <fullName>Level_2_Escalation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>3rd call</description>
    <inlineHelpText>3rd call</inlineHelpText>
    <label>Level 2</label>
    <type>Checkbox</type>
</CustomField>