force-app/main/default/objects/Case/fields/Level_3_Escalation__c.field-meta.xml
<CustomField>
    <fullName>Level_3_Escalation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>4th call or more</description>
    <inlineHelpText>4th call or more</inlineHelpText>
    <label>Level 3</label>
    <type>Checkbox</type>
</CustomField>