force-app/main/default/objects/Case/fields/List_of_Postal_Codes__c.field-meta.xml
<CustomField>
    <fullName>List_of_Postal_Codes__c</fullName>
    <description>List of Postal codes to be updated</description>
    <inlineHelpText>List of Postal codes to be updated (separated by commas)</inlineHelpText>
    <label>List of Postal Codes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>