force-app/main/default/objects/Case/fields/List_of_WIN_IDs__c.field-meta.xml
<CustomField>
    <fullName>List_of_WIN_IDs__c</fullName>
    <description>List of WIN IDs to be updated</description>
    <inlineHelpText>Enter a list of WIN IDs to be updated (separated by commas)</inlineHelpText>
    <label>List of WIN IDs</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>