force-app/main/default/objects/Case/fields/Loyalty_Resolution__c.field-meta.xml
<CustomField>
    <fullName>Loyalty_Resolution__c</fullName>
    <inlineHelpText>Loyalty Rep must select one option prior to assigning to the brach queue.</inlineHelpText>
    <label>Loyalty Resolution</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Saved</fullName>
            </value>
            <value>
                <fullName>Lost</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>