force-app/main/default/objects/Case/fields/Main_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Main_Contact_Email__c</fullName>
    <label>Main Contact Email</label>
    <length>100</length>
    <type>Text</type>
</CustomField>