force-app/main/default/objects/Case/fields/Main_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>Main_Contact_Phone__c</fullName>
    <label>Main Contact Phone</label>
    <type>TextArea</type>
</CustomField>