force-app/main/default/objects/Case/fields/Main_Contact_Title1__c.field-meta.xml
<CustomField>
    <fullName>Main_Contact_Title1__c</fullName>
    <formula>Main_Customer_Contact__r.Title</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The title of the associated contact.</inlineHelpText>
    <label>Contact Title</label>
    <type>Text</type>
</CustomField>