force-app/main/default/objects/Case/fields/Main_Contact_Title__c.field-meta.xml
<CustomField>
    <fullName>Main_Contact_Title__c</fullName>
    <label>Main Contact Title</label>
    <type>TextArea</type>
</CustomField>