force-app/main/default/objects/Case/fields/Main_Customer_Contact__c.field-meta.xml
<CustomField>
    <fullName>Main_Customer_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Contact</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>(1 AND 2 AND 3) OR 4</booleanFilter>
        <filterItems>
            <field>$Source.AccountId</field>
            <operation>equals</operation>
            <valueField>Contact.AccountId</valueField>
        </filterItems>
        <filterItems>
            <field>$Source.RecordTypeId</field>
            <operation>equals</operation>
            <value>Parts Washer Pull Request</value>
        </filterItems>
        <filterItems>
            <field>Contact.Expired__c</field>
            <operation>equals</operation>
            <value>False</value>
        </filterItems>
        <filterItems>
            <field>$Source.RecordTypeId</field>
            <operation>notEqual</operation>
            <value>Parts Washer Pull Request</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>