force-app/main/default/objects/Case/fields/MDM_Approver__c.field-meta.xml
<CustomField>
    <fullName>MDM_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reviewer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CasesMDM</relationshipName>
    <type>Lookup</type>
</CustomField>