force-app/main/default/objects/Case/fields/Model_Number__c.field-meta.xml
<CustomField>
    <fullName>Model_Number__c</fullName>
    <label>Model Number</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Model 14</fullName>
            </value>
            <value>
                <fullName>Model 16</fullName>
            </value>
            <value>
                <fullName>Model 23</fullName>
            </value>
            <value>
                <fullName>Model 33</fullName>
            </value>
            <value>
                <fullName>Model 30</fullName>
            </value>
            <value>
                <fullName>System One</fullName>
            </value>
            <value>
                <fullName>Model 34</fullName>
            </value>
            <value>
                <fullName>Model 44</fullName>
            </value>
            <value>
                <fullName>Model 81</fullName>
            </value>
            <value>
                <fullName>Aqueous</fullName>
            </value>
            <value>
                <fullName>Customer Owned</fullName>
            </value>
            <value>
                <fullName>Gun Cleaner EAC</fullName>
            </value>
            <value>
                <fullName>Gun Cleaner COMS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>