force-app/main/default/objects/Case/fields/Modified_in_first_48_hrs__c.field-meta.xml
<CustomField>
    <fullName>Modified_in_first_48_hrs__c</fullName>
    <formula>ROUND(
MOD(
(LastModifiedDate -  CreatedDate)*24,24),0)  &lt;=  48</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Modified in first 48 hrs</label>
    <type>Checkbox</type>
</CustomField>