force-app/main/default/objects/Case/fields/My_Branch_Cases__c.field-meta.xml
<CustomField>
    <fullName>My_Branch_Cases__c</fullName>
    <formula>IF(  
or(
 Branch_Account__r.Branch_Code__c  =  $User.Sales_Branch__c
, Branch_Account__r.Branch_Code__c =  $User.Secondary_Sales_Branch__c 
, $Profile.Name = &apos;Integration&apos;
, $Profile.Name = &apos;Salesforce API Only System Integrations&apos;
, $Profile.Name = &apos;Sales Operations&apos;
) , True, False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>My Branch Cases</label>
    <type>Checkbox</type>
</CustomField>