force-app/main/default/objects/Case/fields/New_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>New_Account_Name__c</fullName>
    <label>New Account Name</label>
    <type>TextArea</type>
</CustomField>