force-app/main/default/objects/Case/fields/New_Billing_Address__c.field-meta.xml
<CustomField>
    <fullName>New_Billing_Address__c</fullName>
    <label>New Billing Address</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>