force-app/main/default/objects/Case/fields/New_Billing_Expired__c.field-meta.xml
<CustomField>
    <fullName>New_Billing_Expired__c</fullName>
    <defaultValue>false</defaultValue>
    <label>New Billing Expired</label>
    <type>Checkbox</type>
</CustomField>