force-app/main/default/objects/Case/fields/New_Business_Type__c.field-meta.xml
<CustomField>
    <fullName>New_Business_Type__c</fullName>
    <label>New Business Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Base</fullName>
            </value>
            <value>
                <fullName>Event</fullName>
            </value>
            <value>
                <fullName>Locating</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>