force-app/main/default/objects/Case/fields/New_Chain_Code_Name__c.field-meta.xml
<CustomField>
    <fullName>New_Chain_Code_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>New Chain Code Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Cases (New Chain Code Name)</relationshipLabel>
    <relationshipName>Cases4</relationshipName>
    <type>Lookup</type>
</CustomField>